syntax = "proto3";

package shard.v1;

import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/argus-labs/world-engine/chain/x/shard/types";


service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc SubmitCardinalTx(SubmitCardinalTxRequest) returns (SubmitCardinalTxResponse);
}

message SubmitCardinalTxRequest {
  option (cosmos.msg.v1.signer) = "sender";

  // sender is the address of the sender. this will be set to the module address.
  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // tick is the game tick that this transaction was executed in.
  uint64 tick = 2;

  // tx_id is the id associated with the bytes in SignedPayload.Body.
  uint64 tx_id = 3;

  // cardinal_tx is a proto marshalled SignedPayload.
  bytes signed_payload = 4;
}

message SubmitCardinalTxResponse {}
